# UniGrammar.py

./: ReadMe.md  pylintrc  setup.cfg
UniGrammar/: __init__.py  __main__.py
UniGrammar/core/: CharClassProcessor.py  CodeGen.py  defaults.py
UniGrammar/core/WrapperGen/: AltWrapperFuncGen.py  IterWrapperFuncGen.py  WrapperFuncGen.py  WrapperGenContext.py  __init__.py  basicBlocks.py  primitiveSpecificBlocks.py  restWrapperFuncGens.py  specificBlocks.py
UniGrammar/core/ast/: __init__.py  base.py  characters.py  prods.py  templates.py  tokens.py  transformations.py
UniGrammar/core/backend/: Generator.py  Lifter.py  Runner.py  SectionedGenerator.py  Tool.py
UniGrammar/core/templater/: __init__.py  defaultTemplates.py
UniGrammar/generators/: UniGrammarDictGenerator.py  packrat.py  pythonicGenerator.py
UniGrammar/lifters/: parglare.py  regexp.py
UniGrammar/ownGrammarFormat/: __init__.py  decodeExtension.py
UniGrammar/ownGrammarFormat/core/: __init__.py
UniGrammar/ownGrammarFormat/nodes/: __init__.py  modifiers.py
UniGrammar/ownGrammarFormat/sections/: __init__.py
UniGrammar/tools/: __init__.py
UniGrammar/tools/cpp/: belr.py
UniGrammar/tools/java/: Laja.py  example2.laja
UniGrammar/tools/js/: nearley.py  ohm.py  peg.py
UniGrammar/tools/multilanguage/: CoCoR.py  antlr4.py  canopy.py  caper.py  waxeye.py
UniGrammar/tools/python/: PyDSL.py  TatSu.py  arpeggio.py  lark.py  parglare.py  parsimonious.py
UniGrammar/tools/rust/: pest.py
UniGrammar/utils/: charRanges.py  escapelib.py
tests/: prepareTests.sh
