[metadata]
name = UniGrammar
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/UniGrammar.py
description = A DSL for writing grammars implementing EBNF transpiled into DSLs specific to parsers generators
long_description = file: ReadMe.md
keywords = grammars, ANTLR, CoCo/R, parglare, waxeye, TatSu, parsimonious, YAML
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Security
	Topic :: Text Processing

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
packages = UniGrammar, UniGrammar.ast, UniGrammar.backends, UniGrammar.ownGrammarFormat
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.tests.SimpleTests
install_requires =
	rangeslicetools @ git+https://gitlab.com/KOLANICH/rangeslicetools.py
	plumbum @ git+https://github.com/tomerfiliba/plumbum
	stringcase @ git@https://github.com/okunishinishi/python-stringcase

[options.entry_points]
console_scripts =
	UniGrammar = UniGrammar.__main__:UniGrammarCLI.run
